[#15] Feat: 닉네임 중복api 및 user 스웨거 명세 수정
