# src/models/user.sql.js
@@ -1,3 +1,5 @@
 export const insertUserSql = "INSERT INTO user (kakao_id, nickname, created_at, updated_at, status) VALUES (?, ?, NOW(), NOW(), 'ACTIVE');";
 
 export const selectUserSql = "SELECT * FROM user WHERE id = ?";
+
+export const checkNicknameSql = "SELECT * FROM user WHERE nickname = ?";
